

Directory tools/scripts/doxygen
 bsv.filter                Locally Modified          533 

- passed the filename as an input parameter instead of parsing stdin
- extract repository information from filename using awb-resolver --prefix
- Added another doxygen group for the repository the sources are coming from

----------
mgambhir    Date: Tue Jun 11 10:28:51 EDT 2013  CSN: CSN-awb-535
                  Tue Jun 11 14:28:51 UTC 2013


Directory tools/scripts/doxygen
 bsv.filter                Locally Modified          534 

- Changed the way awb-resolver command was executed from the script to make it backwards compatible with 
python 2.65

----------
mgambhir    Date: Wed Jun 12 17:08:21 EDT 2013  CSN: CSN-awb-536
                  Wed Jun 12 21:08:21 UTC 2013


Directory etc
 asim.pack                 Locally Modified          535 

Directory etc/repositories.d
 leap.pack                 Locally Modified          535 

Directory .
 README.debian             Locally Modified          535 

Directory debian
 control                   Locally Modified          535 
 changelog                 Locally Modified          535 
 rules                     Locally Modified          535 

Directory admin/packages
 awb                       Locally Modified          535 

- Creating a new testing release 13.06

----------
mgambhir    Date: Thu Jun 13 17:35:47 EDT 2013  CSN: CSN-awb-538
                  Thu Jun 13 21:35:47 UTC 2013


Directory .
 README.debian             Locally Modified          537 

Directory debian
 changelog                 Locally Modified          537 

Directory admin/packages
 awb                       Locally Modified          537 

- awb 13.06 final release

----------
mgambhir    Date: Mon Jun 17 11:12:39 EDT 2013  CSN: CSN-awb-539
                  Mon Jun 17 15:12:39 UTC 2013


Directory debian
 control                   Locally Modified          538 

- Changed libqt3-mt-dev dependency to libqt4-dev