@@ -1716,6 +1716,38 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>alternativesRefreshAction</sender>
+   <signal>activated()</signal>
+   <receiver>apm_edit</receiver>
+   <slot>modelRefresh_activated()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>370</x>
+     <y>264</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>cacheRefresh</sender>
+   <signal>clicked()</signal>
+   <receiver>apm_edit</receiver>
+   <slot>modelRefresh_activated()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>113</x>
+     <y>482</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>370</x>
+     <y>264</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>fileNew()</slot>
