@@ -10950,3 +10950,13 @@ Directory debian
  control                   Locally Modified          538 
 
 - Changed libqt3-mt-dev dependency to libqt4-dev
+
+----------
+mgambhir    Date: Thu Dec  5 06:21:53 EST 2013  CSN: CSN-awb-567
+                  Thu Dec  5 11:21:53 UTC 2013
+
+
+Directory tools/awb/apm-edit
+ apm_edit.ui               Locally Modified          566 
+
+- Bug fix to make modules refresh work in apm-edit GUI
